# rag_Bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: prompt-engineer.md  test-writer.md
.codex/agents/: prompt-engineer.toml  test-writer.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  llm_client.py  main.py  prompts.py  schemas.py  utils.py
app/bootstrap/: __init__.py  rag_factory.py
app/history/: __init__.py  session_service.py  store.py
app/ingest/: __init__.py  batch_ingest.py  chunker.py  document_loader.py  embedders.py  manifest.py  models.py
app/integrations/: __init__.py  wechat_adapter.py
app/langchain_compat/: __init__.py  retriever_adapter.py
app/query_rewrite/: __init__.py  base.py  llm.py  noop.py  rule_based.py
app/retrievers/: __init__.py  base.py  chroma_retriever.py  crag.py  cross_encoder_reranker.py  hyde_retriever.py  mmr.py  qdrant_retriever.py
app/security/: __init__.py  rbac.py  sensitive.py
app/services/: __init__.py  flow_enumerator.py  (+1 more)
data/: README.md
docs/: chat-history.md  chroma-integration.md  history-context.md  incremental-ingestion.md  interview_qa.md  langchain-migration.md  production-manual-config.md  qdrant-integration.md  query-rewrite.md  rag-interview-notes.md  resume_analysis.md  supported-file-types.md
eval/: qa_pairs.json  run.py
tests/: test_config.py  test_flow_enumerator.py  test_manifest.py  test_query_rewrite.py  test_schemas.py  test_sensitive.py  test_utils.py
(+14 files in other folders)
