[project]
name = "rag-bot"
version = "0.1.0"
description = "Enterprise RAG Knowledge Base Q&A Service"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.1",
    "uvicorn[standard]==0.30.3",
    "openai==1.40.3",
    "httpx<0.28",
    "langchain-core==1.3.2",
    "pydantic==2.8.2",
    "pydantic-settings==2.4.0",
    "chromadb==1.5.9",
    "qdrant-client==1.18.0",
    "pypdf==4.3.1",
    "python-docx==1.1.2",
    "pywin32==306; platform_system == 'Windows'",
    "openpyxl==3.1.5",
    "pytesseract==0.3.13",
    "pypdfium2==4.30.0",
    "Pillow==11.2.1",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
